--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <meta name="og:title" content="The Little Lemon"/>
     <meta name="og:description" content="The Little Lemon: A family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."/>
     <meta name="og:image" content="./Logo.svg"/>
+    <link href='https://fonts.googleapis.com/css?family=Markazi Text' rel='stylesheet'>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
