--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <meta name="og:image" content="./Logo.svg"/>
     <link href='https://fonts.googleapis.com/css?family=Markazi Text' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet'>
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
